# Soc_SWHW_modeling

./: CMakeLists.txt  READMD.md  README.md
chisel_impl/src/main/resource/: inst.asm
soc/: CMakeLists.txt  configs.json  main.cc
soc/asm/: 27_cycle.s  dma_test.s  full_test.s  hw_25_3.s  load_store_simple.s  matmul_basic.s  matmul_simd.s  program_systolic_array.s  test.s  test_matmul.s  test_simd.s
soc/include/: BaseMemory.hh  Bus.hh  CFU.hh  CPU.hh  DMA.hh  DataMemory.hh  DataStruct.hh  Emulator.hh  MMIOUtil.hh  SOC.hh  SystemConfig.hh  SystolicArray.hh  TraceRecord.hh
soc/include/event/: BusTransactionEvent.hh  ExecOneInstrEvent.hh  MemReqEvent.hh
soc/include/packet/: BusPacket.hh  CFUPacket.hh  MemPacket.hh  XBarPacket.hh
soc/libs/: BaseMemory.cc  Bus.cc  CFU.cc  CMakeLists.txt  CPU.cc  DMA.cc  DataMemory.cc  Emulator.cc  SOC.cc  SystolicArray.cc
soc/libs/event/: BusTransactionEvent.cc  ExecOneInstrEvent.cc  MemReqEvent.cc
soc/libs/packet/: BusPacket.cc  CFUPacket.cc  MemPacket.cc  XBarPacket.cc
src/riscv/include/: EXEStage.hh  IDStage.hh  IFStage.hh  MEMStage.hh  PipelineUtils.hh  SOCTop.hh  WBStage.hh
src/riscv/libs/: CMakeLists.txt  CPU.cc  EXEStage.cc  IDStage.cc  IFStage.cc  InstPacket.cc  MEMStage.cc
